TwsPluginCore的完整输出【使用者想用TPF框架，只需要将twsplugincore.jar集成到工程里面就可以】

--- a/TwsShareLib/res/values-v4/attrs.xml
+++ b/TwsShareLib/res/values-v4/attrs.xml
@@ -138,6 +138,8 @@
         <attr name="minDate" format="string" />
         <attr name="spinnersShown" format="boolean" />
         <attr name="startYear" format="integer" />
+        <attr name="lunarShown" format="boolean" />
+        <attr name="unitShown" format="boolean" />
     </declare-styleable>
     <declare-styleable name="EdgeEffect">
         <attr name="colorEdgeEffect" format="color" />
