--- a/TwsShareLib/res/layout-v4/tab_content_v4.xml
+++ b/TwsShareLib/res/layout-v4/tab_content_v4.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.widget.TwsTabHostV4 xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tabhost"
+<android.widget.TwsTabHost xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@id/tabhost"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -25,6 +25,7 @@
 
         <com.tencent.tws.assistant.widget.TabIndicator
             android:id="@+id/tab_indicator"
+            style="?attr/tabIndicatorStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/scrolltabs"
@@ -43,4 +44,4 @@
             android:layout_below="@id/scrolltabs" />
     </RelativeLayout>
 
-</android.widget.TwsTabHostV4>
+</android.widget.TwsTabHost>
