--- a/TwsPluginShareLib/res/values-v4/arrays.xml
+++ b/TwsPluginShareLib/res/values-v4/arrays.xml
@@ -18,16 +18,16 @@
     </string-array>
     <string-array name="lunar_year_part1">
         <item>""</item>
-        <item>"甲"</item>
-        <item>"乙"</item>
-        <item>"丙"</item>
-        <item>"丁"</item>
-        <item>"戊"</item>
-        <item>"己"</item>
-        <item>"庚"</item>
-        <item>"辛"</item>
-        <item>"壬"</item>
-        <item>"癸"</item>
+        <item>"One"</item>
+        <item>"Two"</item>
+        <item>"There"</item>
+        <item>"Four"</item>
+        <item>"Five"</item>
+        <item>"Six"</item>
+        <item>"Seven"</item>
+        <item>"Eight"</item>
+        <item>"Nine"</item>
+        <item>"Ten"</item>
     </string-array>
     <string-array name="lunar_year_part2">
         <item>""</item>
@@ -46,18 +46,18 @@
     </string-array>
     <string-array name="lunar_animals">
         <item>""</item>
-        <item>"鼠"</item>
-        <item>"牛"</item>
-        <item>"虎"</item>
-        <item>"兔"</item>
-        <item>"龙"</item>
-        <item>"蛇"</item>
-        <item>"马"</item>
-        <item>"羊"</item>
-        <item>"猴"</item>
-        <item>"鸡"</item>
-        <item>"狗"</item>
-        <item>"猪"</item>
+        <item>"Rat"</item>
+        <item>"Cow"</item>
+        <item>"Tiger"</item>
+        <item>"Rabbit"</item>
+        <item>"Dragon"</item>
+        <item>"Snake"</item>
+        <item>"Horse"</item>
+        <item>"Sheep"</item>
+        <item>"Monkey"</item>
+        <item>"Chicken"</item>
+        <item>"Dog"</item>
+        <item>"Pig"</item>
     </string-array>
     <string-array name="lunar_month_names">
         <item>"正月"</item>
@@ -137,8 +137,8 @@
         <item>"大雪"</item>
     </string-array>
     <string-array name="tws_calendar_type">
-        <item>农历</item>
-        <item>公历</item>
+        <item>Lunar</item>
+        <item>Solar</item>
     </string-array>
     <string-array name="side_bar_entries">
         <item>A</item>
